--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".scheme.SchemeActivity" />
-        <activity android:name=".scheme.VrVideoActivity"></activity>
+        <activity android:name=".scheme.VrVideoActivity" />
+        <activity android:name=".circle.CircleActivity"></activity>
     </application>
 
 </manifest>
